# python-monorepo

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
projects/minimal_flask_app/: README.md  mypy.ini  pyproject.toml
projects/minimal_flask_app/src/minimal_flask_app/: __init__.py  main.py  py.typed
projects/minimal_flask_app/tests/: test_app.py
projects/project1/: README.md  pyproject.toml
projects/project1/src/: __init__.py  main.py
projects/project1/tests/: test_main.py
projects/shopping_list/: README.md  pyproject.toml  wsgi.py
projects/shopping_list/src/shopping_list/: __init__.py  app.py  database.db  hello.py  init_db.py  main.py
projects/shopping_list/src/shopping_list/templates/: base.html  create.html  edit.html  index.html
projects/shopping_list/tests/: test_main.py
scripts/: create_project.py
